[gd_scene format=3 uid="uid://c31tp5r7bj5jr"]

[ext_resource type="Script" uid="uid://qfmvg2o5pwhp" path="res://Scenes/Minigames/Platformer/Enemies/Walker/walker.gd" id="1_5ug8l"]
[ext_resource type="Texture2D" uid="uid://clqa8btouw3d8" path="res://Scenes/Minigames/Platformer/Resources/Sprites/spritesheet-enemies-default.png" id="2_ju117"]
[ext_resource type="PackedScene" uid="uid://cdxtjgcdkdq2v" path="res://Components/HealthComponent/HealthComponent.tscn" id="3_rw15c"]
[ext_resource type="PackedScene" uid="uid://uj7rukar7v3r" path="res://Components/HurtboxComponent/HurtboxComponent.tscn" id="4_m7gen"]
[ext_resource type="PackedScene" uid="uid://ctyxbyrktye4n" path="res://Components/HitBoxComponent/HitboxComponent.tscn" id="7_m7gen"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5ug8l"]
size = Vector2(57, 35)

[sub_resource type="AtlasTexture" id="AtlasTexture_raf3e"]
atlas = ExtResource("2_ju117")
region = Rect2(130, 325, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rw15c"]
atlas = ExtResource("2_ju117")
region = Rect2(195, 325, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_rw15c"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_raf3e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rw15c")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_43n7w"]
size = Vector2(57, 35)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7nkhp"]
size = Vector2(57, 35)

[node name="Walker" type="CharacterBody2D" unique_id=984390830]
collision_layer = 16
script = ExtResource("1_5ug8l")
move_speed = 100.0
patrol_distance = 1000.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="." unique_id=58254022]
position = Vector2(-0.5, 14.5)
shape = SubResource("RectangleShape2D_5ug8l")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="." unique_id=718478614]
sprite_frames = SubResource("SpriteFrames_rw15c")
frame_progress = 0.62542796

[node name="WallRay" type="RayCast2D" parent="." unique_id=1305277709]
position = Vector2(0, 15)
target_position = Vector2(34, 0)

[node name="WallRay2" type="RayCast2D" parent="." unique_id=167432323]
position = Vector2(0, 15)
target_position = Vector2(-35, 0)

[node name="EdgeRay" type="RayCast2D" parent="." unique_id=415430300]
position = Vector2(0, 15)
target_position = Vector2(0, 25)

[node name="HealthComponent" parent="." unique_id=1334102346 instance=ExtResource("3_rw15c")]
max_health = 1

[node name="HurtboxComponent" parent="." unique_id=1169181295 instance=ExtResource("4_m7gen")]
collision_layer = 32
collision_mask = 8
health_component_path = NodePath("../HealthComponent")
entity_category = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtboxComponent" unique_id=1233899697]
position = Vector2(-0.5, 14.5)
shape = SubResource("RectangleShape2D_43n7w")

[node name="AttackHitbox" parent="." unique_id=10737182 instance=ExtResource("7_m7gen")]
collision_layer = 64
collision_mask = 4
damage = 1
can_hit = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackHitbox" unique_id=1232683897]
position = Vector2(-0.5, 14.5)
shape = SubResource("RectangleShape2D_7nkhp")
